--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,4 +18,4 @@ jobs:
             cd /home/ubuntu/test_cicd
             git pull origin main
             npm install --production
-            npm run start
+            pm2 start all
